a crap ton of fixes for linux compatibility & etc